# Shoot-The-Dot-PRU

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: acc.h  buzzer.h  display.h  joystick.h  shared_linux.h
app/src/: acc.c  buzzer.c  display.c  joystick.c  main.c  shared_linux.c
hal/include/: config_display.h
hal/src/: config_display.c
pru-as4/: CMakeLists.txt  sharedDataStruct.h  shared_pru.c
